Bugfix: Caret vs X close of sub slide on mobile

--- a/sass/modules/_slides.scss
+++ b/sass/modules/_slides.scss
@@ -50,6 +50,21 @@ section.row {
 
 .sub-slide {
   padding: 4em 0;
+  
+  &:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #000;
+    content: "";
+    opacity: .5;
+  }
+  div, h3 {
+    position: relative;
+    z-index: 10;
+  }
 }
 
 a.next-slide {
@@ -62,8 +77,11 @@ a.next-slide {
   transition: ease-out 250ms;
   display: block;
   right: 0;
-  bottom: 0;
+  bottom: 50px;
   float: right;
+  @include media(max-width $nav-breakpoint-value) {
+    padding: 10px;
+  }
   
   @include media(min-width $nav-breakpoint-value) {
     position: absolute;
@@ -173,20 +191,24 @@ section nav.slides-nav {
 
 button.close-btn {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: -19px;
+  top: -24px;
   background: transparent;
   color: #004280;
   border: none;
   transform: scale(.5);
   transition: 250ms;
   transition-timing-function: ease-out;
-  opacity: 0;
+  opacity: 1;
   z-index: 9999;
   
   @include media(min-width 650px) {
     right: 10px;
     top: 10px;
+  }
+  
+  @include media(min-width $nav-breakpoint-value) {
+    display: none;
   }
   
   &:hover {
@@ -262,6 +284,10 @@ nav.sub-slide-navigation {
   width: 100px;
   height: 50px;
   display: block;
+  
+  @include media(max-width $nav-breakpoint-value) {
+    display: none;
+  }
   
   @include media(min-width 650px) {
     bottom: 200px;
